@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<addon id="plugin.video.atv_at" name="ATV.at - Mediathek" version="3.0.3" provider-name="realvito">
+<addon id="plugin.video.atv_at" name="ATV.at - Mediathek" version="3.0.4" provider-name="realvito">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
 		<import addon="script.module.requests" version="2.12.4"/>
@@ -26,9 +26,8 @@
 			<icon>icon.png</icon>
 			<fanart>fanart.jpg</fanart>
 		</assets>
-		<news>[B][COLOR orangered]Version 3.0.3  (16.02.2019)[/COLOR][/B] by realvito[CR]
-- fixed: Startordner = Serien werden NICHT gelistet (Mediathek-URL verändert)
-- fixed: Serien- und Episodenbilder werden NICHT angezeigt (URL der Bilder verändert)
+		<news>[B][COLOR orangered]Version 3.0.4  (17.11.2019)[/COLOR][/B] by realvito[CR]
+- fixed: Bei Einstellung = alle Episoden einer Staffel in einem Ordner anzeigen - werden nur max. 56 Episoden gelistet
 		</news>
 	</extension>
 </addon>
